sensord (0.6.32) unstable; urgency=low

  [Lihan Guo]
  * Added new tap feature, tap sensor offers single, double and single/double tap data.

  [Timo Rongas]
  * Fixes: NB#206204 - sensord prints debugs to console on startup

  [Antti Virtanen]
  * Loader now initializes plugins in reverse order so depenencies gets
    initialized first.
  * Moved context related sensor startup from main() to sensor plugin Init().
  * Replaced some magic number #define with static consts.
  * AvgVarFilter data is now protected with mutex.
  * Bin and RingBuffer refactoring.
  * magneticvariation GConf reading in DeclinationFilter fixed. 
  * libsensordatatypes.so will now register all necessary metatypes during initialization.
  * Refactored makefiles and removed some unnecessary/deprecated definitions.
  * qt-api now hides internals behind pimpl.
  * Implemented buffering with few unit test cases.
  * Replaced old index based accessors for available dataranges and intervals
    with methods which query list of data with single dbus call.
  * Some const correctness fixes.
  * Changed some destructors to virtual which are used in inheritance.
  * Fixed memory leak from OrientationChain.
  * Removed SocketHandler::killSocket() hack. QObject::deleteLater() is used
    to clean up sockets.
  * Fixed crash issues from StandbyOverrideTest and PowerManagementTest.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 10 Nov 2010 11:54:31 +0200

sensord (0.6.31) unstable; urgency=low

  [Timo Rongas]
  * Temporary axis direction switch in magnetometer and accelerometer
    adaptors.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 10 Nov 2010 09:59:08 +0200

sensord (0.6.30) unstable; urgency=low

  [Antti Virtanen]
  * Optimized logger streaming ops to do nothing when used loglevel wouldn't log anything.

  [Timo Rongas]
  * Renamed Screen.IsFlat context property to Position.IsFlat as requested.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 09 Nov 2010 13:09:12 +0300
