@@ -7,3 +7,7 @@ SOURCES += proximityadaptor.cpp \
            proximityadaptorplugin.cpp
 
 include( ../adaptor-config.pri )
+
+!mce_disable {
+    DEFINES += SENSORFW_MCE_WATCHER
+}
