@@ -1,0 +1,6 @@
+<aegis>
+  <request policy="add">
+    <credential name="mce::SensorControl" />
+    <for path="/usr/sbin/sensord" />
+  </request>
+</aegis>
