@@ -3,7 +3,7 @@ Section: misc
 Priority: optional
 Maintainer: Timo Rongas <ext-timo.rongas@nokia.com> 
 Uploaders: Philippe De Swert <philippe.de-swert@nokia.com>
-Build-Depends: debhelper (>=5), libqt4-dev (>= 4.5), doxygen, libcontextprovider-dev (>= 0.3), libgconf2-dev, mce-dev
+Build-Depends: debhelper (>=5), libqt4-dev (>= 4.5), doxygen, libcontextprovider-dev (>= 0.3), libgconf2-dev, mce-dev, aegis-builder (>= 1.4)
 Standards-Version: 3.7.3
 
 Package: sensord
